<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/skin2">

    <RelativeLayout
        android:id="@+id/local_songs_list"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#30000000">

        <ImageView
            android:id="@+id/iv_backtrack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/backtrack"/>

        <TextView
            android:id="@+id/tv_local_songs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_songs_title"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="21sp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_toRightOf="@+id/tv_local_songs_title"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/search"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_operate"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/local_songs_list"
        android:background="#20000000">

        <LinearLayout
            android:id="@+id/ll_random_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_random_play"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/random"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_play"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/bulk_operation"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_local_songs_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_operate"
        android:layout_above="@+id/rl_music_play_control">

    </ListView>

    <RelativeLayout
        android:id="@+id/rl_music_play_control"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#40000000"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/iv_album"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:src="@drawable/music_play"/>

        <LinearLayout
            android:id="@+id/ll_song_artist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@+id/iv_album"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_song_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="孟婆的碗"
                android:maxEms="8"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_song_artist1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="紫菱"
                android:maxEms="8"
                android:singleLine="true"
                android:ellipsize="end"
                android:paddingTop="2dp"
                android:textColor="#c1c1c1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/play_control"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingRight="15dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_previous"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:src="@drawable/previous"/>

            <ImageView
                android:id="@+id/iv_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="15dp"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/next"/>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
